# NPU_accel

./: .coverage  SUPPORTED_OPS.md  benchmark_npu_matmul.py  build_npu.bat  test_npu_llama_block.py  tiny_llama.py
.github/workflows/: ci.yml
examples/: benchmark_npu_matmul.py  mnist_training.py  tiny_llama.py
intel_npu_lib/: .gitignore  CMakeLists.txt  README.md  ROADMAP.md  pyproject.toml  setup.py  test_compiler_kv_cache.py  test_compiler_llm.py  test_compiler_mlp.py
intel_npu_lib/csrc/: bindings.cpp  device.cpp  ops.cpp
intel_npu_lib/csrc/include/: device.h  ops.h
intel_npu_lib/src/intel_npu_acceleration/: __init__.py  _functional.py  autograd.py  compiler.py  converters.py  frontend.py  functional.py  graph_builder.py  registry.py
intel_npu_lib/tests/: test_basic.py  test_cv_workload.py  test_encoder_workload.py  test_kv_cache.py  test_llama_model.py  test_llm_ops.py  test_mlp.py  test_parametrized.py  test_transformer.py
